--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
 
 p {
   font-size: 18px;
+}
+section {
+  width: 300px;
+  height: 200px;
+  background: #ccc;
+  color:#777;
 
 }
 
@@ -25,7 +31,7 @@ nav {
   margin-top: 50px;
   margin-bottom: 50px;
   text-align: center;
-  background: #333;
+  background: #ccc;
   width: 75%;
   margin: auto;
   color: #777;
