--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 
 
-p {
+.blue {
   color: #777;
   background: #ebebeb;
+}
+p {
   width: 400px;
   height: 60px;
   margin-left: auto;
@@ -13,8 +15,7 @@ p {
 h1 {
   width: 400px;
   height: 60px;
-  color: #777;
-  background: #ebebeb;
+
   margin-left: auto;
   margin-right: auto;
   margin-top: 45px;
@@ -23,21 +24,18 @@ h1 {
 section {
   width: 495px;
   height: 330px;
-  color: #777;
-  background: #ebebeb;
   right: 10%;
   text-align: center;
   margin-top: 20px;
   padding-top: 20px;
   margin-left: 26%
 
+
 }
 
 header {
   padding: 20px;
   text-align: center;
-  color: #777;
-  background: #ebebeb;
   width: 960px;
   font-size: 18px;
   height: 70px;
@@ -54,13 +52,12 @@ body {
   width: 960px;
   font-family: arial;
   font-size: 18px;
+  height: auto;
 }
 
 nav {
   padding: 20px;
   text-align: center;
-  color: #777;
-  background: #ebebeb;
   width: 960px;
   height: 70px;
   font-size: 18px;
@@ -72,8 +69,6 @@ nav {
 
 
 aside {
-  color: #777;
-  background: #ebebeb;
   margin-left: 20px;
   margin-right: -30%;
   width: 480px;
@@ -93,11 +88,9 @@ footer {
   text-align: center;
   width: 960px;
   height: 70px;
-  margin left: auto;
+  margin-left: auto;
   margin-right: auto;
   font-size: 18px;
-  color: #777;
-  background: #ebebeb;
 
 }
   article {
