--- a/style.css
+++ b/style.css
@@ -1,72 +1,40 @@
-
-
 .blue {
   color: #777;
   background: #ebebeb;
+  text-align: center;
+  font-family: "arial", helvetica neue, helvetica, sans-serif;
+  font-size: 18px;
 }
+
 p {
-  width: 400px;
-  height: 60px;
-  margin-left: auto;
-  margin-right: auto;
   margin-top: 10px;
   padding-top: 4px;
 }
-h1 {
-  width: 400px;
-  height: 60px;
 
+h1 {
+   margin-top: 45px;
+}
+
+.green {
+  width: 400px;
+  height: 55px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 45px;
-
 }
+
 section {
   width: 495px;
   height: 330px;
   right: 10%;
-  text-align: center;
   margin-top: 20px;
   padding-top: 20px;
   margin-left: 26%
-
-
 }
-
-header {
-  padding: 20px;
-  text-align: center;
-  width: 960px;
-  font-size: 18px;
-  height: 70px;
-  margin-top: 10px;
-  margin-right: -30%;
-  margin-bottom: 10px;
-  margin-left: auto;
-
-  }
 
 body {
   background-color: #777;
-  font-family: "arial", helvetica neue, helvetica, sans-serif;
   width: 960px;
-  font-family: arial;
-  font-size: 18px;
-  height: auto;
 }
-
-nav {
-  padding: 20px;
-  text-align: center;
-  width: 960px;
-  height: 70px;
-  font-size: 18px;
-  margin-top: 10px;
-  margin-right: -30%;
-  margin-bottom: 10px;
-  margin-left: auto;
-}
-
 
 aside {
   margin-left: 20px;
@@ -74,25 +42,20 @@ aside {
   width: 480px;
   height: 330px;
   float: right;
-  text-align: center;
-  margin-top: 10px;
-  padding-top: 20px;
-
+  padding-top: 15px;
+  margin-top: -36.5%;
 }
 
-
-footer {
-  margin-bottom: 10px;
-  margin-top: 30px;
+.red {
   padding: 20px;
-  text-align: center;
   width: 960px;
-  height: 70px;
+  height: 55px;
+  margin-top: 10px;
+  margin-right: -30%;
+  margin-bottom: 10px;
   margin-left: auto;
-  margin-right: auto;
-  font-size: 18px;
+  }
 
-}
   article {
     background: #777;
     color: #ccc;
@@ -101,15 +64,13 @@ footer {
     text-align: center;
     padding-top: 10px;
     padding-right: 5px;
-    padding-bottom: 5px;
-    padding-right: 5px;
     margin-top: 12%;
     margin-bottom: .5px;
     margin-right: auto;
     margin-left: auto;
   }
+
   .clearfix::after {
-    content: "";
     clear: both;
     display: table;
 }
