--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .blue {
   color: #777;
   background: #ebebeb;
@@ -8,24 +9,25 @@
 
 p {
   margin-top: 10px;
-  padding-top: 4px;
+  padding-top: 5px;
+
 }
 
 h1 {
    margin-top: 45px;
+   padding-top: 10px;
 }
 
 .green {
-  width: 400px;
-  height: 55px;
+  width: 410px;
+  height: 50px;
   margin-left: auto;
   margin-right: auto;
 }
 
 section {
   width: 495px;
-  height: 330px;
-  right: 10%;
+  height: 320px;
   margin-top: 20px;
   padding-top: 20px;
   margin-left: 26%
@@ -40,10 +42,10 @@ aside {
   margin-left: 20px;
   margin-right: -30%;
   width: 480px;
-  height: 330px;
+  height: 300px;
   float: right;
-  padding-top: 15px;
-  margin-top: -36.5%;
+  padding-top: 40px;
+  margin-top: -35.5%;
 }
 
 .red {
@@ -55,6 +57,9 @@ aside {
   margin-bottom: 10px;
   margin-left: auto;
   }
+  footer {
+    padding-top: 20px;
+  }
 
   article {
     background: #777;
@@ -62,15 +67,14 @@ aside {
     height: 220px;
     width: 92%;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 5px;
     padding-right: 5px;
-    margin-top: 12%;
-    margin-bottom: .5px;
+    margin-top: 10%;
+    margin-bottom: 10px;
     margin-right: auto;
     margin-left: auto;
   }
 
   .clearfix::after {
     clear: both;
-    display: table;
 }
