--- a/style.css
+++ b/style.css
@@ -6,11 +6,13 @@
   font-family: "arial", helvetica neue, helvetica, sans-serif;
   font-size: 18px;
 }
+.ice {
+  margin-top: 20px;
+}
 
 p {
   margin-top: 10px;
   padding-top: 5px;
-
 }
 
 h1 {
@@ -56,9 +58,6 @@ aside {
   margin-right: -30%;
   margin-bottom: 10px;
   margin-left: auto;
-  }
-  footer {
-    padding-top: 20px;
   }
 
   article {
